# pystatkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pystatkit YAML instructions.yaml
examples/study_example/: README.md  generate_data.py
examples/study_example/config/: 01_two_group.yaml  02_paired.yaml  03_anova.yaml  full_demo.yaml
examples/study_example/data/: synthetic_gait_data.csv  synthetic_v02_data.csv
examples/study_example/outputs/: 01_gaze_duration_HC_vs_PwP.docx  01_gaze_duration_HC_vs_PwP.xlsx  02_step_variability_pre_vs_post.docx  02_step_variability_pre_vs_post.xlsx  03_rt_by_difficulty.docx  03_rt_by_difficulty.xlsx
pystatkit/: __init__.py  cli.py
pystatkit/core/: __init__.py  assumptions.py  config.py  data_loader.py  orchestrator.py  provenance.py  results.py
pystatkit/io/: __init__.py  apa_formatter.py
pystatkit/methods/: __init__.py  ancova.py  anova_mixed.py  anova_rm.py  correlation.py  demographic.py  one_way_anova.py  paired.py  two_group.py
tests/: test_ancova.py  test_anova.py  test_anova_mixed.py  test_anova_rm.py  test_config.py  test_correlation.py  test_demographic.py  test_orchestrator.py  test_paired.py  test_two_group.py
